<resources>
    <string name="app_name">DailyBurn</string>
    <string name="start">Get Started !</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="hight">Height(cm)</string>
    <string name="weight">Weight(kg)</string>
    <string name="goal">Goal</string>

    <string name="option">What would you like to do?</string>
    <string name="optionA">Build Health Plan</string>
    <string name="optionB">Change your Preferences</string>
    <string name="optionC">Need Help?</string>
    <string-array name="goal">
        <item>Keep track of calories</item>
        <item>Keep track of nutrition</item>
        <item>Lose weight</item>
        <item>Gain muscle</item>
        <item>Solve eating disorders</item>
        <item>Get help to solve health issues</item>
    </string-array>
    <string name="allergy">Allergy</string>
    <string-array name="allergy">
        <item>None</item>
        <item>Eggs</item>
        <item>Fish</item>
        <item>Milk</item>
        <item>Peanuts</item>
        <item>Tree nuts</item>
        <item>Shellfish</item>
        <item>Wheat</item>
        <item>SoyaBean</item>

    </string-array>
    <string name="notificationMin">Select Time</string>
    <string-array name="notificationMin">
        <item>None</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
    </string-array>

    <string name="feedbackOptions"> Select Frequency</string>
    <string name="how_well_did_you_follow_your_plan">How Well did you follow your Plan ?</string>
    <string name="no_i_did_not_follow_my_plan">No, I did not follow my Plan</string>
    <string name="pick_one_of_the_following">Pick One of the following</string>
    <string name="yes_i_followed_my_plan">Yes, I followed my Plan</string>
    <string name="edit_your_food_items">Edit Your Food Items</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="_1_glass_milk_before_bed">1 Glass Milk - Before Bed</string>
    <string name="beef_and_spinach_6pm">Beef and spinach - 6PM</string>
    <string name="morning_meditation_6am">Morning Meditation- 6AM</string>
    <string name="steamed_broccoli_1pm">Steamed Broccoli - 1PM</string>
    <string name="accept">Accept</string>
    <string name="create_new">Create New</string>
    <string name="your_summary">Your Summary</string>
    <string name="you_were_90_accurate_with_your_plan_n_n_good_job_n_nbased_on_your_goal_you_lost_5_kg_n_n_your_new_weight_is_45_kg">You were 90% accurate with your Plan\n\n Good Job !!\n\nBased on your goal, you lost 5 Kg\n\n Your new weight is 45 Kg !!</string>
    <string-array name="feedbackOptions">
        <item>None</item>
        <item> Daily</item>
        <item> Weekly</item>
    </string-array>
</resources>
