<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_plan_solve_eating_disorders"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dailyburn.editPlanSolveEatingDisorders">

    <TextView
        android:text="@string/edit_your_food_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtChgFood"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:text="@string/steamed_broccoli_1pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/disorderItem02"
        android:layout_below="@+id/disorderItem01"
        android:layout_alignStart="@+id/disorderItem01"
        android:layout_alignEnd="@+id/disorderItem01" />

    <CheckBox
        android:text="@string/morning_meditation_6am"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/disorderItem01"
        android:layout_below="@+id/txtChgFood"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:text="@string/_1_glass_milk_before_bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/disorderItem03"
        android:layout_alignStart="@+id/disorderItem03"
        android:layout_marginTop="15dp"
        android:id="@+id/disorderItem04" />

    <CheckBox
        android:text="@string/beef_and_spinach_6pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/disorderItem03"
        android:layout_below="@+id/disorderItem02"
        android:layout_alignStart="@+id/disorderItem02"
        android:layout_alignEnd="@+id/disorderItem02" />

    <Button
        android:text="@string/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDisorderRemove"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/disorderItem04"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
