<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.dailyburn.MenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtWelcome"
            android:textSize="14sp" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/option"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/group">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:id="@+id/option1"
                android:text="@string/optionA"
                android:textAlignment="center" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/option3"
                android:text="@string/optionC"
                android:layout_weight="1"
                android:textAlignment="center" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/option2"
                android:text="@string/optionB"
                android:layout_weight="1"
                android:textAlignment="center" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>
